<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryCheck</string>
    <string name="error_loading_storytypes">Problem loading story types</string>
    <string name="error_loading_story">Could not load the story</string>
    <string name="delete_story">Delete story</string>
    <string name="share_story">Share story</string>
    <string name="tips_tricks">Tips and Tricks</string>
    <string name="add_story">Add Checklist</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="tips">Tips</string>
    <string name="headline">Headline</string>
    <string name="story_type">Story type</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Are you sure you want to delete the checklist for story:</string>
    <string name="headline_hint">Story headline goes here</string>
    <string name="delete_checklist">Delete checklist</string>
    <string name="edit_story">Change headline</string>
    <string name="add_checklist_helptext">Adding a headline to your checklist makes it easier to identify later when all
        the checklists are displayed in a list
    </string>
    <string name="report">Report</string>
    <string name="report_story">View Report</string>
    <string name="story_list_title">My Stories</string>
    <string name="downloadFor">Check out the new update for %1$s!\nAvailable now on Google Play.</string>
    <string name="dialogPositiveButton">OK</string>
    <string name="dialogNeutralButton">Later</string>
    <string name="dialogNegativeButton">No, thanks</string>
    <string name="newUpdateAvailable">New update found</string>
    <string name="about">About</string>
    <string name="feedback">Provide feedback</string>
    <string name="feedback_message">Please mail us with any feedback or feature requests you may have. We are keen to
        here from you.
    </string>
    <string name="edit">Edit</string>
</resources>
