<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mi_add"
          android:title="@string/add_story"
            android:icon="@drawable/add" android:showAsAction="always">
    </item>
    <item android:id="@+id/mi_feedback"
          android:title="@string/feedback"
            android:icon="@drawable/ic_action_email" android:showAsAction="collapseActionView">
    </item>
    <item android:id="@+id/mi_about"
          android:title="@string/about"
          android:icon="@drawable/tips" android:showAsAction="collapseActionView">
    </item>
    <!--<item android:id="@+id/mi_tips"-->
          <!--android:title="@string/tips_tricks"-->
          <!--android:icon="@drawable/tips" android:showAsAction="ifRoom">-->
    <!--</item>-->

</menu>