<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg"
              style="@style/Theme.Storycheck">
    <TextView android:id="@+id/tv_helpText"
              android:text="@string/add_checklist_helptext"
              android:gravity="bottom"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:layout_alignParentLeft="true"
              android:padding="8dp"
              />
    <TextView android:id="@+id/tv_headline"
              android:text="@string/headline"
              android:gravity="bottom|left"
              android:layout_alignParentLeft="true"
              android:layout_below="@id/tv_helpText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignRight="@+id/tv_story_type"
              android:paddingTop="16dp"
              style="@style/Theme.Storycheck.Widget"
              android:layout_marginLeft="8dp"/>
    <EditText android:id="@+id/et_headline"
              android:layout_width="fill_parent"
              android:layout_height="48dp"
              android:layout_below="@id/tv_helpText"
              android:layout_toRightOf="@id/tv_headline"
              android:layout_alignBaseline="@id/tv_headline"
              android:layout_marginLeft="8dp"
              android:hint="@string/headline_hint"
              style="@style/Theme.Storycheck.Widget"
              android:inputType="text"/>
    <TextView android:id="@id/tv_story_type"
              android:text="@string/story_type"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/tv_headline"
              android:layout_alignBottom="@+id/sp_story_type"
              android:layout_alignTop="@id/sp_story_type"
              android:gravity="center_vertical"
              style="@style/Theme.Storycheck.Widget"
              android:layout_marginLeft="8dp"/>
    <Spinner  android:id="@id/sp_story_type"
              android:layout_width="fill_parent"
              android:layout_height="48dp"
              android:layout_below="@id/et_headline"
              android:layout_toRightOf="@+id/tv_story_type"
              android:layout_marginLeft="8dp"/>
 </RelativeLayout>